--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "truffle test"
   },
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.10",
     "fs-extra": "^9.1.0",
     "ganache-cli": "^6.12.2",
     "truffle": "^5.2.3"
